[gd_scene load_steps=5 format=3 uid="uid://d1acffp8kt4ux"]

[ext_resource type="PackedScene" uid="uid://c2q31er5uottm" path="res://ui/bst_scene_control.tscn" id="1_cmgjy"]
[ext_resource type="Script" path="res://scenes/bst_scene.gd" id="1_x8ly7"]
[ext_resource type="PackedScene" uid="uid://bmck4awuxs8r1" path="res://objects/tree_visual.tscn" id="2_ws40v"]
[ext_resource type="PackedScene" uid="uid://bjdgmc1koj4n7" path="res://objects/viewer.tscn" id="3_tt1kl"]

[node name="BstScene" type="Node2D"]
script = ExtResource("1_x8ly7")

[node name="BstSceneControl" parent="." instance=ExtResource("1_cmgjy")]

[node name="TreeVisual" parent="." instance=ExtResource("2_ws40v")]

[node name="Viewer" parent="." instance=ExtResource("3_tt1kl")]
max_speed = 10

[connection signal="submitted" from="BstSceneControl" to="." method="_on_bst_scene_control_submitted"]
[connection signal="tree_reset" from="BstSceneControl" to="." method="_on_bst_scene_control_tree_reset"]
[connection signal="view_reset" from="BstSceneControl" to="." method="_on_bst_scene_control_view_reset"]
